--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "compile": "babel src --presets react,es2015 --out-dir static",
     "watch": "babel src --presets react,es2015 --out-dir static --watch",
+    "init-db": "mongo scripts/init.mongo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
